--- a/src/classes/WaveMetadataApplication.cls
+++ b/src/classes/WaveMetadataApplication.cls
@@ -2,4 +2,5 @@ public virtual class WaveMetadataApplication {
 	public String appName;
 	public String appDescription;
 	public List<WaveMetadataApplicationObject> objects;
+	public List<Edgemart> edgemarts;
 }
