--- a/src/classes/WaveDataManager_test.cls
+++ b/src/classes/WaveDataManager_test.cls
@@ -58,16 +58,16 @@ private class WaveDataManager_test {
 
 		MultiStaticResourceCalloutMock multimock = new MultiStaticResourceCalloutMock();
 		
-		String jsonMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/WaveMetadata.json';
+		String appsMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/WaveApplications.csv';
 		String usersMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Users_metadata.csv';
 		String usersDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Users.csv';
 		String accountsMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Accounts_metadata.csv';
-		String accountsDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/AccountsForSales.csv';
+		String accountsDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Accounts.csv';
 		String oppMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Sales/Opportunity_metadata.csv';
 		String oppDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Sales/Opportunities.csv';
 		String usersDataWithDblqUrl = 'http://www.example.com/usersCsvWithDBLQ';
 
-		multimock.setStaticResource(jsonMetadataUrl, 'WaveMetadataJSON');
+		multimock.setStaticResource(appsMetadataUrl, 'WaveAppsMetadataCSV');
 		multimock.setStaticResource(usersMetadataUrl, 'UserMetadataCSV');
 		multimock.setStaticResource(usersDataUrl, 'UsersDataCSV');
 		multimock.setStaticResource(usersDataWithDblqUrl, 'UsersDataCsvWithDBLQ');
@@ -86,9 +86,9 @@ private class WaveDataManager_test {
 		List<SelectOption> options = cnt.getWaveApps();
 
 		System.assertNotEquals(0, options.size());
-
+		/*
 		cnt.selectedWaveApp = 'Wave for Sales';
-		String appDsc = cnt.getAppDesciption();
+		String appDsc = cnt.getAppDescription();
 
 		System.assertNotEquals('No description available.', appDsc);
 
@@ -102,24 +102,27 @@ private class WaveDataManager_test {
 		wcdr.getData(usersDataWithDblqUrl, true);
 
 		cnt.installApp();
-		cnt.checkProcessingStatus();		
+		cnt.checkProcessingStatus();*/
 	}
 
 	@isTest static void insertFolderTest(){
 
 		WaveDataManagerController cnt = new WaveDataManagerController();
+		MultiStaticResourceCalloutMock multimock = new MultiStaticResourceCalloutMock();
+		String appsMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/WaveApplications.csv';
+		multimock.setStaticResource(appsMetadataUrl, 'WaveAppsMetadataCSV');
+		multimock.setStatusCode(200);
+		multimock.setHeader('Content-Type', 'text/plain');		
+		Test.setMock(HttpCalloutMock.class, multimock);
+		cnt.pageLoad();
 		cnt.folderName = 'TestingApp';
-
 		String message = 'The Folder name must be specified, cannot be empty and must adhere to the Salesforce DeveloperName format'; 
 		String mockResponseBody = '[{"errorCode" : "228","message" : "' + message +'"}]';
-		
-
 		WaveFolderCreationHttpCalloutMock httpCallout = new WaveFolderCreationHttpCalloutMock(200,'',mockResponseBody, new Map<String, String>());
 		Test.setMock(HttpCalloutMock.class, httpCallout);
-		
+		cnt.selectedWaveApp = 'Wave_for_Sales';
 		String res = cnt.insertFolder();
 		System.assertEquals(message,res);
-
 	}
 
 	/*@isTest static void checkExistanceFolderTest(){
