--- a/src/classes/WaveMetadataApplication.cls
+++ b/src/classes/WaveMetadataApplication.cls
@@ -1,6 +1,7 @@
 public virtual class WaveMetadataApplication {
 	public String appName;
 	public String appDescription;
+	public String dataflowLocation;
 	public List<WaveMetadataApplicationObject> objects;
 	public List<Edgemart> edgemarts;
 }
