--- a/src/classes/WaveDataManager_test.cls
+++ b/src/classes/WaveDataManager_test.cls
@@ -54,8 +54,7 @@ private class WaveDataManager_test {
 		errs = mUtils.createField(fieldSpec);
 	}
 
-	@isTest static void intermediateControllerTest(){
-
+	private static MultiStaticResourceCalloutMock createStaticResources(){
 		MultiStaticResourceCalloutMock multimock = new MultiStaticResourceCalloutMock();
 		
 		String appsMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/WaveApplications.csv';
@@ -66,6 +65,7 @@ private class WaveDataManager_test {
 		String oppMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Sales/Opportunity_metadata.csv';
 		String oppDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Sales/Opportunities.csv';
 		String usersDataWithDblqUrl = 'http://www.example.com/usersCsvWithDBLQ';
+		String quotaMetadataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Sales/QuotaMetadata.json';
 
 		multimock.setStaticResource(appsMetadataUrl, 'WaveAppsMetadataCSV');
 		multimock.setStaticResource(usersMetadataUrl, 'UserMetadataCSV');
@@ -75,34 +75,55 @@ private class WaveDataManager_test {
 		multimock.setStaticResource(accountsDataUrl, 'AccountsDataCSV');
 		multimock.setStaticResource(oppMetadataUrl, 'OpportunityMetadataCSV');
 		multimock.setStaticResource(oppDataUrl, 'OpportunitiesDataCSV');
-		
+		multimock.setStaticResource(quotaMetadataUrl, 'QuotaMetadataUrl');
+
 		multimock.setStatusCode(200);
 		multimock.setHeader('Content-Type', 'text/plain');
-		
+
+		return multimock; 
+	}
+
+
+	@isTest static void intermediateControllerTest(){
+
+		MultiStaticResourceCalloutMock multimock = createStaticResources(); 
+		String usersDataUrl = 'https://raw.githubusercontent.com/rodrigom-oktana-io/wave-tooling/master/Users.csv';
+		String usersDataWithDblqUrl = 'http://www.example.com/usersCsvWithDBLQ';
+
 		WaveDataManagerController cnt = new WaveDataManagerController();
+
 		Test.setMock(HttpCalloutMock.class, multimock);
 		cnt.pageLoad();
 
 		List<SelectOption> options = cnt.getWaveApps();
 
 		System.assertNotEquals(0, options.size());
-		/*
+		
 		cnt.selectedWaveApp = 'Wave for Sales';
 		String appDsc = cnt.getAppDescription();
 
-		System.assertNotEquals('No description available.', appDsc);
+
+		//System.assertNotEquals('No description available.', appDsc);
 
 		cnt.displayMetadataResponse();
+		System.assertEquals(false, cnt.MetadataConnectionWarning);
+
 		cnt.MetadataResponse = 'TEST';
 		cnt.displayMetadataResponse();
-
+		System.assertEquals(true, cnt.MetadataConnectionWarning);
+		
 		WaveCsvDataRetriever wcdr = new WaveCsvDataRetriever();
 		wcdr.validateDataURL('');
 		wcdr.getSchemaFieldNames(usersDataUrl);
 		wcdr.getData(usersDataWithDblqUrl, true);
 
+		cnt.selectedWaveApp = 'Wave_for_Sales';
+		cnt.folderName = 'TestingFolder';        
+		
 		cnt.installApp();
-		cnt.checkProcessingStatus();*/
+		cnt.checkProcessingStatus();
+
+		System.debug('Error: ' + cnt.errorMessage);
 	}
 
 	@isTest static void insertFolderTest(){
@@ -126,9 +147,19 @@ private class WaveDataManager_test {
 	}
 
 	/*@isTest static void checkExistanceFolderTest(){
+		Folder folder = new Folder();
+		folder.Name = 'TestingApp';
 
 		WaveDataManagerController cnt = new WaveDataManagerController();
+		cnt.folderName = folder.Name;
+
+		insert folder;
+
+		cnt.deleteFolder();
 		
+		folder = [SELECT Id FROM Folder WHERE DeveloperName = :cnt.folderName AND Type = 'Insights'];
+
+		System.assertEquals(null, folder);
 	}*/
 	
 }
